crates/reinhardt-core/macros/tests/ui/settings/fail/composition_duplicate_inferred_key.rs
use reinhardt_macros::settings;

#[settings(CacheSettings | cache: SomeOtherType)]
pub struct BadSettings;

fn main() {}
