crates/reinhardt-core/macros/tests/ui/settings/fail/composition_duplicate_inferred_key.stderr
error: Duplicate field name `cache`.
 --> tests/ui/settings/fail/composition_duplicate_inferred_key.rs:3:1
  |
3 | #[settings(CacheSettings | cache: SomeOtherType)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `settings` (in Nightly builds, run with -Z macro-backtrace for more info)
